syntax = "proto3";
option java_multiple_files = true;
package com.westwell.api;


message PicsInRedisRequest {
  repeated string pickeys_req = 1;
}


message DetectPicsInRedisResponse {
  repeated string pickeys_res = 1;

  //    错误码 0标识成功
  int32 code = 2;
  //    错误信息
  string msg = 3;
}


service DetectionService {

  //检测帧图片转换成人脸小图
  //    PicsInRedisRequest 待处理图片key的列表
  //    DetectPicsInRedisResponse 已经处理图片key的列表
  rpc detectPicsInRedis(PicsInRedisRequest) returns (DetectPicsInRedisResponse);


  //检测帧图片的人体小图
  //    PicsInRedisRequest 待处理图片key的列表
  //    DetectPicsInRedisResponse 已经处理图片key的列表
  rpc detectPicsBodyInRedis(PicsInRedisRequest) returns (DetectPicsInRedisResponse);
}



